--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Toolkit</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>PDF Compressor</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
+    <script src="script.js" defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <header>
-        <h1>PDF Toolkit</h1>
-        <p>Compress, Merge, and Edit PDFs online</p>
-    </header>
-    <main>
-        <section id="tool-selection">
-            <div class="tool-card" onclick="selectTool('compress')">Compress PDF</div>
-            <div class="tool-card" onclick="selectTool('merge')">Merge PDF</div>
-            <div class="tool-card" onclick="selectTool('edit')">Edit PDF</div>
-        </section>
-        <div id="tool-container"></div>
-    </main>
-    <script src="script.js"></script>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+
+    <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-md text-center">
+        <h1 class="text-2xl font-bold text-gray-800">PDF Compressor</h1>
+        <p class="text-gray-600 mt-2">Reduce your PDF file size easily.</p>
+
+        <div class="mt-4">
+            <input type="file" id="pdfFile" accept="application/pdf" 
+                   class="block w-full border border-gray-300 p-2 rounded-md focus:ring focus:ring-blue-400">
+        </div>
+
+        <button onclick="compressPDF()" 
+                class="mt-4 bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition">
+            Compress PDF
+        </button>
+
+        <a id="downloadLink" class="mt-4 hidden block text-blue-600 font-bold"></a>
+    </div>
+
 </body>
 </html>
