--- a/index.html
+++ b/index.html
@@ -4,28 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Compressor</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
-    <script src="script.js" defer></script>
-    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<body>
 
-    <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-md text-center">
-        <h1 class="text-2xl font-bold text-gray-800">PDF Compressor</h1>
-        <p class="text-gray-600 mt-2">Reduce your PDF file size easily.</p>
-
-        <div class="mt-4">
-            <input type="file" id="pdfFile" accept="application/pdf" 
-                   class="block w-full border border-gray-300 p-2 rounded-md focus:ring focus:ring-blue-400">
-        </div>
-
-        <button onclick="compressPDF()" 
-                class="mt-4 bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition">
-            Compress PDF
-        </button>
-
-        <a id="downloadLink" class="mt-4 hidden block text-blue-600 font-bold"></a>
+    <div class="container">
+        <h1>PDF Compressor</h1>
+        <input type="file" id="pdfFile" accept="application/pdf">
+        <button onclick="compressPDF()">Compress PDF</button>
+        <a id="downloadLink" style="display: none;">Download Compressed PDF</a>
     </div>
 
+    <script src="script.js"></script>
 </body>
 </html>
