--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
         <button onclick="compressPDF()">Compress PDF</button>
         <a id="downloadLink" style="display: none;">Download Compressed PDF</a>
     </div>
-
     <script src="script.js"></script>
+    <!-- ✅ PDF-Lib (for PDF editing & image embedding) -->
+<script src="https://unpkg.com/pdf-lib@1.16.0/dist/pdf-lib.min.js"></script>
+
+<!-- ✅ PDF.js (for deeper compression & optimization) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+
+<!-- ✅ Your main script -->
+<script src="script.js" defer></script>
 </body>
 </html>
