--- a/index.html
+++ b/index.html
@@ -4,17 +4,143 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Compressor</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf-lib/1.17.1/pdf-lib.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@material-design-icons/font/css/material-icons.min.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        body {
+            background: linear-gradient(135deg, #6e8efb, #a777e3);
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .container {
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(12px);
+            border-radius: 16px;
+            padding: 30px;
+            width: 90%;
+            max-width: 450px;
+            text-align: center;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+            color: #fff;
+            animation: fadeIn 0.6s ease-in-out;
+        }
+
+        h1 {
+            font-size: 2rem;
+            font-weight: 500;
+            margin-bottom: 15px;
+        }
+
+        .upload-area {
+            border: 2px dashed #fff;
+            padding: 30px;
+            border-radius: 12px;
+            margin-bottom: 20px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            position: relative;
+        }
+
+        .upload-area:hover {
+            background: rgba(255, 255, 255, 0.2);
+            border-color: #a777e3;
+        }
+
+        .upload-area p {
+            font-size: 1rem;
+            font-weight: 400;
+        }
+
+        .upload-icon {
+            font-size: 40px;
+            margin-bottom: 10px;
+        }
+
+        input[type="file"] {
+            display: none;
+        }
+
+        .compress-btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            background: #fff;
+            color: #6e8efb;
+            padding: 12px 24px;
+            border: none;
+            border-radius: 24px;
+            font-size: 1rem;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+            text-transform: uppercase;
+        }
+
+        .compress-btn:hover {
+            background: #a777e3;
+            color: #fff;
+            transform: translateY(-2px);
+        }
+
+        .compress-btn .material-icons {
+            margin-left: 8px;
+            font-size: 20px;
+        }
+
+        .footer-text {
+            margin-top: 15px;
+            font-size: 0.85rem;
+            opacity: 0.8;
+        }
+
+        /* Ripple Effect */
+        .compress-btn::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.3);
+            top: 0;
+            left: 0;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        .compress-btn:active::after {
+            opacity: 1;
+            transition: 0s;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.95); }
+            to { opacity: 1; transform: scale(1); }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <h1>PDF Compressor</h1>
-        <input type="file" id="pdfFile" accept="application/pdf">
-        <button onclick="compressPDF()">Compress PDF</button>
-        <a id="downloadLink" style="display: none;">Download Compressed PDF</a>
+        <div class="upload-area" onclick="document.getElementById('fileInput').click()">
+            <span class="material-icons upload-icon">cloud_upload</span>
+            <p>Drop your PDF here or click to upload</p>
+            <input type="file" id="fileInput" accept=".pdf">
+        </div>
+        <button class="compress-btn">
+            Compress Now <span class="material-icons">compress</span>
+        </button>
+        <p class="footer-text">Fast. Simple. Free.</p>
     </div>
-    <script src="script.js" defer></script>
 </body>
 </html>
