--- a/index.html
+++ b/index.html
@@ -4,183 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF Compressor</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@material-design-icons/font/css/material-icons.min.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Roboto', sans-serif;
-        }
-
-        body {
-            background: linear-gradient(135deg, #5C6BC0, #8E24AA);
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .container {
-            background: rgba(255, 255, 255, 0.15);
-            backdrop-filter: blur(12px);
-            border-radius: 16px;
-            padding: 30px;
-            width: 90%;
-            max-width: 450px;
-            text-align: center;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-            color: #fff;
-            animation: fadeIn 0.6s ease-in-out;
-        }
-
-        h1 {
-            font-size: 2rem;
-            font-weight: 500;
-            margin-bottom: 15px;
-        }
-
-        .upload-area {
-            border: 2px dashed #fff;
-            padding: 30px;
-            border-radius: 12px;
-            margin-bottom: 20px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        .upload-area:hover {
-            background: rgba(255, 255, 255, 0.2);
-            border-color: #ffcc80;
-        }
-
-        .upload-area p {
-            font-size: 1rem;
-            font-weight: 400;
-        }
-
-        .upload-icon {
-            font-size: 40px;
-            margin-bottom: 10px;
-        }
-
-        input[type="file"] {
-            display: none;
-        }
-
-        .compress-btn {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            background: #ffcc80;
-            color: #333;
-            padding: 12px 24px;
-            border: none;
-            border-radius: 24px;
-            font-size: 1rem;
-            font-weight: 500;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            position: relative;
-            overflow: hidden;
-            text-transform: uppercase;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .compress-btn:hover {
-            background: #ffb74d;
-            transform: translateY(-2px);
-        }
-
-        .compress-btn .material-icons {
-            margin-left: 8px;
-            font-size: 20px;
-        }
-
-        .footer-text {
-            margin-top: 15px;
-            font-size: 0.85rem;
-            opacity: 0.9;
-        }
-
-        /* Ripple Effect */
-        .compress-btn::after {
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.3);
-            top: 0;
-            left: 0;
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
-
-        .compress-btn:active::after {
-            opacity: 1;
-            transition: 0s;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: scale(0.95); }
-            to { opacity: 1; transform: scale(1); }
-        }
-    </style>
 </head>
 <body>
     <div class="container">
         <h1>PDF Compressor</h1>
-        <div class="upload-area" id="uploadArea">
-            <span class="material-icons upload-icon">cloud_upload</span>
+        
+        <div class="upload-area" onclick="document.getElementById('fileInput').click()">
             <p>Drop your PDF here or click to upload</p>
             <input type="file" id="fileInput" accept=".pdf">
         </div>
-        <button class="compress-btn" id="compressBtn" disabled>
-            Compress Now <span class="material-icons">compress</span>
-        </button>
+
+        <button class="compress-btn">Compress Now</button>
+
         <p class="footer-text">Fast. Simple. Free.</p>
     </div>
-
-    <script>
-        document.getElementById('uploadArea').addEventListener('click', function () {
-            document.getElementById('fileInput').click();
-        });
-
-        document.getElementById('fileInput').addEventListener('change', function (event) {
-            const file = event.target.files[0];
-            if (file) {
-                document.getElementById('compressBtn').disabled = false;
-            }
-        });
-
-        document.getElementById('compressBtn').addEventListener('click', async function () {
-            const fileInput = document.getElementById('fileInput');
-            if (fileInput.files.length === 0) {
-                alert("Please select a PDF file first.");
-                return;
-            }
-
-            const file = fileInput.files[0];
-            const reader = new FileReader();
-
-            reader.onload = async function (event) {
-                const pdfBytes = new Uint8Array(event.target.result);
-                const compressedPdf = await compressPDF(pdfBytes);
-
-                const blob = new Blob([compressedPdf], { type: "application/pdf" });
-                const link = document.createElement("a");
-                link.href = URL.createObjectURL(blob);
-                link.download = "compressed.pdf";
-                document.body.appendChild(link);
-                link.click();
-                document.body.removeChild(link);
-            };
-
-            reader.readAsArrayBuffer(file);
-        });
-    </script>
 </body>
 </html>
