--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Compressor</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PDF Compressor</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>PDF Compressor</h1>
-        
-        <div class="upload-area" onclick="document.getElementById('fileInput').click()">
-            <p>Drop your PDF here or click to upload</p>
-            <input type="file" id="fileInput" accept=".pdf">
-        </div>
-
-        <button class="compress-btn">Compress Now</button>
-
-        <p class="footer-text">Fast. Simple. Free.</p>
+  <div class="container">
+    <h1>PDF Compressor</h1>
+    <div class="upload-area" id="uploadArea">
+      <p>Drag and drop a PDF file here or click to upload</p>
+      <input type="file" id="fileInput" accept="application/pdf" hidden />
     </div>
+    <div class="options">
+      <label for="compressionLevel">Compression Level:</label>
+      <select id="compressionLevel" class="compression-level">
+        <option value="low">Low Compression</option>
+        <option value="medium" selected>Medium Compression</option>
+        <option value="high">High Compression</option>
+      </select>
+    </div>
+    <div class="progress-container">
+      <div class="progress-bar" id="progressBar"></div>
+    </div>
+    <button class="compress-btn">Compress Now</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
